# Miko

./: .clang-format  .gitignore  .gitmodules  A.miko  CMakeLists.txt  Miko.csproj  Miko.sln  Miko_lang.sln  Program.cs  README.md
.cache/clangd/index/: constructor.cpp.27A4D5E8D796A6FE.idx  main.cpp.E1F44CEEAAEF744F.idx  source.cpp.8584E686B4118137.idx  source.hpp.C56FC87B8167A2A1.idx  token.hpp.6E7CCD5CAE0BACA3.idx
Lib/: Lexer.cs
Lib/Structure/: MikoQueue.cs  Source.cs  TokenType.cs
Lib/Structure/AST/: AST.cs  ASTNode.cs  ASTNodeType.cs
Lib/Structure/Token/: Token.cs  TokenType.cs
Miko.Library/: Miko.Library.csproj  Utility.cs
Miko.Library/Analysis/Syntax/: SourceSyntaxNode.cs  SyntaxEndNode.cs  SyntaxNode.cs  SyntaxTree.cs
Miko.Library/Analysis/Syntax/Type/: TypeSyntaxNode.cs
Miko.Library/Lexer/: Lexer.cs  LexerToken.cs  LexerType.cs
Miko.Library/Parser/: Parser.cs
Miko.Library/Parser/Syntax/: DefineSyntaxNode.cs  IdentifierSyntaxNode.cs  SourceSyntaxNode.cs  SyntaxEndNode.cs  SyntaxNode.cs  SyntaxTree.cs
Miko.Library/Parser/Syntax/Type/: StructTypeSyntaxNode.cs  TypeSyntaxNode.cs  UserDefinedTypeSyntaxNode.cs
Miko.Library/Source/: FileSource.cs  Source.cs  StreamSource.cs  StringSource.cs
Miko.Library/Syntax/: DefineSyntaxNode.cs  SourceSyntaxNode.cs  SyntaxChildNode.cs  SyntaxNode.cs  SyntaxTree.cs  TypeSyntaxNode.cs
Miko.Test/: LexerTest.cs  Miko.Test.csproj
Miko.Test/Source/: FileSourceTest.cs  StreamSourceTest.cs
antlr/: Miko.g4  MikoLexerRules.g4  MikoParserRules.g4
cmake/: FindANTLR.cmake  FindLLVM.cmake
src/: AST.cpp  AST.hpp  analysis.cpp  analysis.hpp  codegen.cpp  codegen.hpp  constructor.cpp  error.cpp  error.hpp  lex.cpp  lex.hpp  main.cpp  output.cpp  output.hpp  parse.cpp  parse.hpp  source.cpp  source.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp  util.cpp  util.hpp
src/pre/: MikoLexerRules.cpp  MikoLexerRules.h  MikoLexerRules.interp  MikoParserRules.cpp  MikoParserRules.h  MikoParserRules.interp  MikoParserRules.tokens  MikoParserRulesBaseListener.cpp  MikoParserRulesBaseListener.h  MikoParserRulesBaseVisitor.cpp  MikoParserRulesBaseVisitor.h  MikoParserRulesListener.cpp  MikoParserRulesListener.h  MikoParserRulesVisitor.cpp  MikoParserRulesVisitor.h
test/: StdHello.miko  TestHello.miko  a.miko  idea.miko
